--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
-name: echeckoutlk_ipg_flutter
-description: eCheckoutLK IPG SDK for Flutter
-version: 2.0.4
+name: echeckout_ipg_flutter
+description: eCheckout IPG SDK for Flutter
+version: 3.0.0
 repository: https://github.com/payable/flutter-ipg-echeckoutlk
-homepage: https://flutter-ipg.payable.lk
 
 environment:
   sdk: ">=2.17.6 <4.0.0"
